--- a/frameworks/projects/Jewel/src/main/sass/components/_datagrid.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_datagrid.sass
@@ -58,6 +58,15 @@
         content: "@@ZERO_WIDTH_SPACE"
         //content: "\200b" <-- this does not survive sass compilation, so instead using a token for replacement in a post-sass processing step above
 
+.first.jewel.list, .middle.jewel.list {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 j|DataGrid
     IBeadView: ClassReference("org.apache.royale.jewel.beads.views.DataGridView")
     IBeadModel: ClassReference("org.apache.royale.html.beads.models.DataGridCollectionViewModel")
